Add Carousel component

--- a/src/routes/index.mdx
+++ b/src/routes/index.mdx
@@ -1,4 +1,4 @@
-import Counter from "~/components/Counter";
-import { A } from "solid-start";
+import { carouselItems } from "~/data";
+import { Carousel } from "~/components";
 
-<Counter />
+<Carousel slides={carouselItems} />
