--- a/src/routes/index.mdx
+++ b/src/routes/index.mdx
@@ -1,4 +1,4 @@
-import { carouselItems } from "~/data";
-import { Carousel } from "~/components";
+import { slides } from "~/data";
+import { Slider } from "~/components";
 
-<Carousel slides={carouselItems} />
+<Slider slides={slides} />
