--- a/src/routes/[...404].mdx
+++ b/src/routes/[...404].mdx
@@ -1,3 +1,7 @@
 import { A } from "solid-start";
 
-# Page Not Found
+# Page not found
+
+<br />
+
+<p style="text-align: center;">Return to the <A href="/">home page</A>.</p>
