Refactor slider components into LazySlider

--- a/src/routes/index.mdx
+++ b/src/routes/index.mdx
@@ -1,4 +1,4 @@
 import { slides } from "~/data";
-import { Slider } from "~/components";
+import { LazySlider } from "~/components";
 
-<Slider slides={slides} />
+<LazySlider slides={slides} />
