Refactor content to work with CMS

--- a/src/routes/index.mdx
+++ b/src/routes/index.mdx
@@ -1,4 +1,4 @@
 import { slides } from "~/data";
 import { LazySlider } from "~/components";
 
-<LazySlider slides={slides} />
+<LazySlider slides={slides.photos} autoplayIntervalMs={slides.autoplayIntervalMs} />
