Update Pages “about”

--- a/src/routes/about.mdx
+++ b/src/routes/about.mdx
@@ -1,4 +1,4 @@
-Sophia is a photographer & director based in New York City. Select clients and publications: Vogue, Vogue Italia, Teen Vogue, Gucci, Google, Nike, Apple, Meta, The New York Times, Forbes, The Wall Street Journal, Coca-Cola, Amazon, Vans, Converse, UGG, Timberland, i-D, Elle, New York Magazine, The New Yorker, Vanity Fair, The RealReal, Paper Magazine, Urban Outfitters, Hypebeast, Highsnobiety, Tory Burch, Puma, Guess, RedBull, Juicy Couture, Pepsi, NBC News, Depop, Swarovski, Dazed, VICE, Peloton, L'Oréal, Wilhelmina Models, Barney's, Refinery29, Parade, Atlantic Records, Herschel, Missguided, NPR, Savage X Fenty, Under Armour, etc.
+Sophia is a photographer & director based in New York City. Select clients and publications: Vogue, Vogue Italia, Teen Vogue, Gucci, Google, Nike, Apple, Meta, The New York Times, Forbes, The Wall Street Journal, Coca-Cola, Gap, Amazon, Vans, Converse, UGG, Timberland, i-D, Elle, New York Magazine, The New Yorker, Vanity Fair, The RealReal, Paper Magazine, Urban Outfitters, Hypebeast, Highsnobiety, Tory Burch, Puma, Guess, RedBull, Juicy Couture, Pepsi, NBC News, Depop, Swarovski, Dazed, VICE, Peloton, L'Oréal, Wilhelmina Models, Barney's, Refinery29, Parade, Atlantic Records, Herschel, Missguided, NPR, Savage X Fenty, Under Armour, etc.
 
 For all inquiries please email: [sup@sophiawilson.nyc](mailto:sup@sophiawilson.nyc)
 
